01-terraform-vsphere-rke2-rancher/modules/node/templates/rancher-management/rancher-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
  name: rancher-ingress
  namespace: cattle-system
spec:
  rules:
  - host: rancher.kendopz.com
    http:
      paths:
      - backend:
          service:
            name: rancher
            port:
              name: https
        path: /
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - rancher.kendopz.com
    secretName: rancher-tls-certificate
